[gd_scene load_steps=8 format=3 uid="uid://dch5bx3xv5ykr"]

[ext_resource type="Script" uid="uid://j438bksyvbfp" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://6gsypa6spd03" path="res://assets/kenney/Enemies/enemyRed3.png" id="2_4ra3w"]
[ext_resource type="Shader" uid="uid://bepc8vfwhf3u3" path="res://shaders/flash.gdshader" id="2_5uy6h"]
[ext_resource type="Script" uid="uid://b4h42tg0t2jhl" path="res://scripts/sight.gd" id="4_5uy6h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4w8v"]
resource_local_to_scene = true
shader = ExtResource("2_5uy6h")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_pct = 0.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4ra3w"]
particle_flag_disable_z = true
spread = 150.0
initial_velocity_min = 20.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4w8v"]
size = Vector2(221.66666, 950)

[node name="Enemy" type="Area2D"]
scale = Vector2(0.6, 0.6)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_md0e3")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_c4w8v")
texture = ExtResource("2_4ra3w")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-39, 41, -53, -4, -25, -37, -17, -37, -8, -43, 8, -43, 18, -36, 25, -36, 51, -3, 38, 43, 32, 43, 28, 39, 30, 29, 12, 22, 10, 33, -10, 33, -14, 23, -30, 29, -28, 40, -34, 43)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="WaitToBeQueuedTimer" type="Timer" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4ra3w")

[node name="LaserMarkers" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserMarkers"]
position = Vector2(-35, 65)

[node name="Marker2D2" type="Marker2D" parent="LaserMarkers"]
position = Vector2(35, 65)

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("4_5uy6h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.500003, 465)
shape = SubResource("RectangleShape2D_c4w8v")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="WaitToBeQueuedTimer" to="." method="_on_wait_to_be_queued_timer_timeout"]
[connection signal="timeout" from="LaserTimer" to="Area2D" method="_on_laser_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
